<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_upload_title"
        android:layout_width="fill_parent"
        android:layout_height="88dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/txtView_upload_title"
        android:textAlignment="center"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText_UserEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="32dp"
        android:autofillHints="@string/editText_UserEmail"
        android:hint="@string/editText_UserEmail"
        android:padding="10dp"
        android:paddingBottom="4dp" />


    <EditText
        android:id="@+id/editText_Password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="32dp"
        android:autofillHints="@string/txt_password"
        android:hint="@string/txt_password"
        android:padding="10dp" />

    <Button
        android:id="@+id/button_Upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:onClick="basicWrite"
        android:text="@string/btn_Upload" />

    <Button
        android:id="@+id/button_retrieve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:onClick="basicRead"
        android:text="@string/btn_retrieve" />


</LinearLayout>